[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certifycert"
version = "0.1.0"
description = "Certify is a python tool designed to check the security of SSL/TLS certificates."
authors = [{ name = "Shivam Saraswat", email = "thecybersapien@protonmail.com" }]
license = { file = "LICENSE.md" }
readme = "README.md"
dependencies = ["certifi", "ocsp-checker", "pyjarm", "requests", "pyopenssl"]
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/shivamsaraswat/certify"
